# investment-forecasting

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/divanalysis/: main.rs
src/divforecasting/: main.rs
src/divportfolio/: main.rs
src/forecasting/: main.rs
